--- a/myapp/src/app/login/login.page.html
+++ b/myapp/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Welcome login </ion-title>
+    <ion-title>Welcome login</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -8,14 +8,16 @@
     <ion-card class="ENTRADA">
    <ion-img src="/assets/icon/login.jpg"></ion-img><br>
   </ion-card>
-  
+  <form ngSubmit=login(forma) #forma="ngForm">
   <ion-card class="ENTRADA">
-   <label for="name" ><strong>Usuario</strong></label><br>
-   <input type="text" id="usuario" placeholder="Enter user" ><br>
+    
+   <label for="name" ><strong>Correo</strong></label><br>
+   <input type="email" id="correo" placeholder="Email" ngModel #email="ngModel" name="email" minlength="3" maxlength="50" required><br>
+
    
    <label for="password"><strong>Contraseña</strong></label><br>
-   <input type="text" id="contraseña" placeholder="Enter password" ><br><br>
-    </ion-card>
-   <ion-button expand="full" href='/app/tabs/tab1' color="primary">ir a home</ion-button><br>
-
+   <input type="password" id="Contraseña" placeholder="Password" ngModel #password="ngModel" name="password" minlength="3" maxlength="50" required><br><br>
+   </ion-card> 
+   <ion-button expand="full" href='/app/tabs/tab1' color="primary" type="submit" [disabled]=!forma.valid>TAB 1</ion-button><br>
+  </form>
 </ion-content>
